--- a/examples/Hello.ipynb
+++ b/examples/Hello.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
@@ -12,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got 2"
+       "Hello.... got 44 ... detected the langauge to be Unknown"
       ]
      },
      "execution_count": 1,
@@ -21,7 +34,18 @@
     }
    ],
    "source": [
-    "2"
+    "44"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# CUDA"
    ]
   },
   {
@@ -36,7 +60,15 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got 44"
+       "Hello.... got __global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
+       "    //@@ Insert code to implement vector addition here\n",
+       "    int index = threadIdx.x + blockIdx.x*blockDim.x;\n",
+       "    if (index < len) {\n",
+       "        out[index] = in1[index] + in2[index];\n",
+       "\t} else {\n",
+       "\t\tprintf(\"%d\\n\", index);\n",
+       "\t}\n",
+       "} ... detected the langauge to be "
       ]
      },
      "execution_count": 2,
@@ -45,14 +77,24 @@
     }
    ],
    "source": [
-    "44"
+    "__global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
+    "    //@@ Insert code to implement vector addition here\n",
+    "    int index = threadIdx.x + blockIdx.x*blockDim.x;\n",
+    "    if (index < len) {\n",
+    "        out[index] = in1[index] + in2[index];\n",
+    "\t} else {\n",
+    "\t\tprintf(\"%d\\n\", index);\n",
+    "\t}\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
