changes for travis

--- a/examples/Hello.ipynb
+++ b/examples/Hello.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -15,7 +16,7 @@
        "Hello.... got 2 ... detected the langauge to be "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -36,10 +37,10 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got 44 ... detected the langauge to be Unknown"
+       "Hello.... got 44 ... detected the langauge to be "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,12 +57,16 @@
     "editable": true
    },
    "source": [
-    "# CUDA"
+    "# CUDA\n",
+    "\n",
+    "do stuff\n",
+    "\n",
+    "`kflsda`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -71,7 +76,8 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got __global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
+       "Hello.... got %%nvcc -some\n",
+       "__global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
        "    //@@ Insert code to implement vector addition here\n",
        "    int index = threadIdx.x + blockIdx.x*blockDim.x;\n",
        "    if (index < len) {\n",
@@ -82,12 +88,13 @@
        "} ... detected the langauge to be "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%nvcc -some\n",
     "__global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
     "    //@@ Insert code to implement vector addition here\n",
     "    int index = threadIdx.x + blockIdx.x*blockDim.x;\n",
@@ -97,6 +104,30 @@
     "\t\tprintf(\"%d\\n\", index);\n",
     "\t}\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hello.... got <p>foo</p> ... detected the langauge to be "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "<p>foo</p>"
    ]
   },
   {
