--- a/examples/Hello.ipynb
+++ b/examples/Hello.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -13,21 +13,42 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got 2 ... detected the langauge to be "
+       "got === total 72\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 bin\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 10 11:29 boot\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 24 10:50 build\r\n",
+       "drwxr-xr-x  11 root root 2820 Apr 24 10:50 dev\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 24 10:50 etc\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 10 11:29 home\r\n",
+       "drwxr-xr-x   8 root root 4096 Feb 16 15:15 lib\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 lib64\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 media\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 mnt\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 opt\r\n",
+       "dr-xr-xr-x 153 root root    0 Apr 24 10:50 proc\r\n",
+       "drwx------   2 root root 4096 Apr 11 00:59 root\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 12 21:07 run\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 12 21:07 sbin\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 24 10:50 src\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 11 00:59 srv\r\n",
+       "dr-xr-xr-x  13 root root    0 Apr 23 23:40 sys\r\n",
+       "drwxrwxrwt   2 root root 4096 Apr 11 00:59 tmp\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 12 21:07 usr\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 12 21:07 var\r\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2"
+    "ls -l /"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -37,16 +58,18 @@
     {
      "data": {
       "text/plain": [
-       "Hello.... got 44 ... detected the langauge to be "
+       "got === UID        PID  PPID  C STIME TTY          TIME CMD\r\n",
+       "root         1     0  0 10:50 ?        00:00:00 /bin/bash\r\n",
+       "root        40     0  0 10:50 ?        00:00:00 ps -ef\r\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "44"
+    "ps -ef"
    ]
   },
   {
