--- a/examples/Hello.ipynb
+++ b/examples/Hello.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -13,23 +13,23 @@
     {
      "data": {
       "text/plain": [
-       "got === total 72\r\n",
+       "total 72\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 bin\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 10 11:29 boot\r\n",
-       "drwxr-xr-x   2 root root 4096 Apr 24 10:50 build\r\n",
-       "drwxr-xr-x  11 root root 2820 Apr 24 10:50 dev\r\n",
-       "drwxr-xr-x   1 root root 4096 Apr 24 10:50 etc\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 24 14:47 build\r\n",
+       "drwxr-xr-x  11 root root 2820 Apr 24 14:47 dev\r\n",
+       "drwxr-xr-x   1 root root 4096 Apr 24 14:47 etc\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 10 11:29 home\r\n",
        "drwxr-xr-x   8 root root 4096 Feb 16 15:15 lib\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 lib64\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 media\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 mnt\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 opt\r\n",
-       "dr-xr-xr-x 153 root root    0 Apr 24 10:50 proc\r\n",
+       "dr-xr-xr-x 143 root root    0 Apr 24 14:47 proc\r\n",
        "drwx------   2 root root 4096 Apr 11 00:59 root\r\n",
        "drwxr-xr-x   1 root root 4096 Apr 12 21:07 run\r\n",
        "drwxr-xr-x   1 root root 4096 Apr 12 21:07 sbin\r\n",
-       "drwxr-xr-x   2 root root 4096 Apr 24 10:50 src\r\n",
+       "drwxr-xr-x   2 root root 4096 Apr 24 14:47 src\r\n",
        "drwxr-xr-x   2 root root 4096 Apr 11 00:59 srv\r\n",
        "dr-xr-xr-x  13 root root    0 Apr 23 23:40 sys\r\n",
        "drwxrwxrwt   2 root root 4096 Apr 11 00:59 tmp\r\n",
@@ -37,7 +37,7 @@
        "drwxr-xr-x   1 root root 4096 Apr 12 21:07 var\r\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -58,18 +58,16 @@
     {
      "data": {
       "text/plain": [
-       "got === UID        PID  PPID  C STIME TTY          TIME CMD\r\n",
-       "root         1     0  0 10:50 ?        00:00:00 /bin/bash\r\n",
-       "root        40     0  0 10:50 ?        00:00:00 ps -ef\r\n"
+       "root\r\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ps -ef"
+    "whoami"
    ]
   },
   {
@@ -89,33 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Hello.... got %%nvcc -some\n",
-       "__global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
-       "    //@@ Insert code to implement vector addition here\n",
-       "    int index = threadIdx.x + blockIdx.x*blockDim.x;\n",
-       "    if (index < len) {\n",
-       "        out[index] = in1[index] + in2[index];\n",
-       "\t} else {\n",
-       "\t\tprintf(\"%d\\n\", index);\n",
-       "\t}\n",
-       "} ... detected the langauge to be "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%nvcc -some\n",
     "__global__ void vecAdd(float * in1, float * in2, float * out, int len) {\n",
@@ -131,24 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Hello.... got <p>foo</p> ... detected the langauge to be "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "<p>foo</p>"
    ]
@@ -172,6 +139,7 @@
    "name": "inle_spec"
   },
   "language_info": {
+   "codemirror_mode": "text/x-c++src",
    "file_extension": ".rai",
    "mimetype": "application/x-rai",
    "name": "rai",
